syntax = "proto3";

package cart;

service CartService {
  rpc GetCart(GetCartRequest) returns (Cart) {}
  rpc AddToCart(AddToCartRequest) returns (Cart) {}
  rpc RemoveFromCart(RemoveFromCartRequest) returns (Cart) {}
}

message GetCartRequest {
  int32 userId = 1;
}

message AddToCartRequest {
  int32 userId = 1;
  int32 productId = 2; 
  int32 quantity = 3;
}

message RemoveFromCartRequest {
  int32 userId = 1;
  int32 productId = 2;
  int32 quantity = 3;
}

message Cart {
  int32 id = 1;
  int32 userId = 2;
  int32 totalItems = 3;
  float totalPrice = 4;
  string status = 5;
  repeated CartItem cartItems = 6;
}

message CartItem {
  int32 id = 1;
  int32 productId = 2;
  int32 quantity = 3;
}